fixing centering and spacing

--- a/style.css
+++ b/style.css
@@ -9,13 +9,13 @@ h2 {
 }
 
 /* Styles for the question "Which resources would you like to access now?" */
-h3 { 
+/* h3 { 
     
 }
 
 #question { 
  
-}
+} */
 /* Styles for the paragraph text on each page  */
 
 body { 
